@@ -39,6 +39,7 @@ CREATE TABLE `wglinks_links` (
   `link_logo` VARCHAR(100) NULL DEFAULT '',
   `link_state` INT(10) NOT NULL DEFAULT '0',
   `link_type` INT(10) NOT NULL DEFAULT '0',
+  `link_target` VARCHAR(20) NOT NULL DEFAULT '',
   `link_submitter` INT(10) NOT NULL DEFAULT '0',
   `link_date_created` INT(10) NOT NULL DEFAULT '0',
   PRIMARY KEY (`link_id`)
