@@ -69,6 +69,9 @@ wglinks_links:
             name: link_type
             attributes: ' INT(10) NOT NULL DEFAULT ''0'' '
         -
+            name: link_target
+            attributes: ' VARCHAR(20) NOT NULL DEFAULT '''''''' '
+        -
             name: link_submitter
             attributes: ' INT(10) NOT NULL DEFAULT ''0'' '
         -
