@@ -8,6 +8,7 @@
  - added feedback feature (goffy)
  - added new icon set (goffy)
  - moved to singular table names - part 1 (goffy)
+ - added link type and target (goffy)
 
 <h5>1.07 RC 1  NOT RELEASED</h5>  [2019/../..]
  - fixed bug with missing index.html (cesagonchu/goffy)
